--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <!-- ESTA ES LA PARTE DE LOS ESTILOS CSS -->
 
+    <!-- ESTA ES LA PARTE DE ESTILOS CSS PARA PODER SUBIRLO A LA PAGINA WEB -->
+    
     <style>
         body{
     margin: 0px;
